fix: alignment table heading in leaderboard

--- a/static/css/pages/leaderboard.css
+++ b/static/css/pages/leaderboard.css
@@ -85,7 +85,7 @@ a:hover {
     color: #fff;
     opacity: .7;
     padding: 5px 12px;
-    text-align: center;
+    text-align: center !important;
     font-size: 12px;
 }
 
